--- a/static/styles/staff.less
+++ b/static/styles/staff.less
@@ -8,8 +8,6 @@
   h2 {
     margin-top: 0;
     font-weight: bold;
-    border-right: 1px solid @gray;
-
     }
 
   @media (min-width: @screen-sm-min) {
